Fix the spacing on the brand name and sizing on the audiophile.

--- a/intro-app/src/components/Intro/css/intro.css
+++ b/intro-app/src/components/Intro/css/intro.css
@@ -18,6 +18,9 @@
   border: 1px solid #000;
   background-color: #fff;
 }
+.audiophile {
+  height: 80%;
+}
 h1 {
   line-height: 1;
 }
